protocolmodel/mcrl2/testing/errors/error_5002.mcf
% E5002 - Invalid server info
[true* . ERROR_MSG(E5002)] false